[gd_scene load_steps=9 format=3 uid="uid://bevvxty3dkl32"]

[ext_resource type="Script" path="res://Scripts/Entities/Totems/GenericBaseTotem.gd" id="1_0jabu"]
[ext_resource type="Script" path="res://Scripts/Entities/Totems/TotemStats.gd" id="2_85nos"]
[ext_resource type="Script" path="res://Scripts/Entities/EntityTargeting.gd" id="3_gqfcn"]
[ext_resource type="Script" path="res://Scripts/Entities/Totems/TotemAbility.gd" id="4_oh1gt"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_6dqxm"]
height = 1.0

[sub_resource type="CylinderShape3D" id="CylinderShape3D_7jtdc"]
height = 8.0
radius = 4.25046

[sub_resource type="CylinderShape3D" id="CylinderShape3D_yji5j"]
height = 4.0

[sub_resource type="CylinderShape3D" id="CylinderShape3D_2lc5h"]
height = 4.0

[node name="base Totem" type="Node3D" node_paths=PackedStringArray("Stats", "Body", "collider", "Targeting", "AbilityArea")]
script = ExtResource("1_0jabu")
Stats = NodePath("TotemStats")
Body = NodePath("StaticBody3D")
collider = NodePath("StaticBody3D/CollisionShape3D")
Targeting = NodePath("Targeting")
AbilityArea = NodePath("Ability area")

[node name="TotemStats" type="Node" parent="."]
script = ExtResource("2_85nos")
AbilityRange = 35
AbilitySpeed = 1.0
AbilityPower = 56.0

[node name="StaticBody3D" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("CylinderShape3D_6dqxm")

[node name="PickUp collider" type="StaticBody3D" parent="StaticBody3D"]
collision_layer = 16
collision_mask = 0

[node name="Collider" type="CollisionShape3D" parent="StaticBody3D/PickUp collider"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4, 0)
shape = SubResource("CylinderShape3D_7jtdc")

[node name="Targeting" type="Area3D" parent="." node_paths=PackedStringArray("rangeShape", "resetTargetingTimer")]
script = ExtResource("3_gqfcn")
rangeShape = NodePath("CollisionShape3D")
resetTargetingTimer = NodePath("Timer")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Targeting"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
shape = SubResource("CylinderShape3D_yji5j")

[node name="Timer" type="Timer" parent="Targeting"]
wait_time = 0.5

[node name="Ability area" type="Area3D" parent="." node_paths=PackedStringArray("areaOfEffect", "triggerCooldown")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
collision_layer = 0
collision_mask = 6
script = ExtResource("4_oh1gt")
areaOfEffect = NodePath("CollisionShape3D")
triggerCooldown = NodePath("ability cooldown")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ability area"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
shape = SubResource("CylinderShape3D_2lc5h")

[node name="ability cooldown" type="Timer" parent="Ability area"]
one_shot = true

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
radius = 3.0

[connection signal="body_entered" from="Ability area" to="Ability area" method="EntityEnterArea"]
[connection signal="body_exited" from="Ability area" to="Ability area" method="EntityExitArea"]
[connection signal="timeout" from="Ability area/ability cooldown" to="Ability area" method="TriggerCooldownRefresh"]
